# RetrieveMistake

./: CMakeLists.txt  README.md
headers/exceptions/: RetrieveMistakeException.h
headers/mistakes/: IncorrectCubeOfDifBinomialMistake.h  IncorrectCubeOfSumBinomialMistake.h  IncorrectPowerOfPolynomialMistake.h  IncorrectSquareOfDifBinomialMistake.h  IncorrectSquareOfSumBinomialMistake.h  Mistake.h
headers/polynomials/: Polynomial.h
src/: main.cpp
src/exceptions/: RetrieveMistakeException.cpp
src/mistakes/: IncorrectCubeOfDifBinomialMistake.cpp  IncorrectCubeOfSumBinomialMistake.cpp  IncorrectPowerOfPolynomialMistake.cpp  IncorrectSquareOfDifBinomialMistake.cpp  IncorrectSquareOfSumBinomialMistake.cpp  Mistake.cpp
src/polynomials/: Polynomial.cpp
